k8s/common/default/flux.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux
  namespace: default
  labels: &labels
    app: flux
    name: flux
    app.kubernetes.io/name: flux
    app.kubernetes.io/instance: flux
  annotations:
    fluxcd.io/tag.flux: semver:~1
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      serviceAccountName: flux
      volumes:
      - name: git-key
        secret:
          secretName: flux-git-deploy
          defaultMode: 0400
      - name: git-keygen
        emptyDir:
          medium: Memory
      containers:
      - name: flux
        image: fluxcd/flux:1.16.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
        ports:
        - name: flux
          containerPort: 3030
        - name: metrics
          containerPort: 3031
        volumeMounts:
        - name: git-key
          mountPath: /etc/fluxd/ssh
          readOnly: true
        - name: git-keygen
          mountPath: /var/fluxd/keygen
        args:
        - --git-url=git@github.com:hannahs-family/infrastructure
        - --git-branch=master
        - --git-path=k8s/common,k8s/$(CLUSTER_NAME)
        - --git-label=flux-$(CLUSTER_NAME)
        - --git-poll-interval=1h
        - --listen-metrics=:3031
        - --log-format=json
        - --memcached-hostname=memcached.kube-system.svc
        - --memcached-service=
        - --ssh-keygen-dir=/var/fluxd/keygen
        - --sync-garbage-collection
        - --sync-interval=1h
