k8s/common/default/traefik.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-dashboard
  namespace: default
spec:
  ports:
  - name: dashboard-http
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik
  namespace: default
  annotations:
    flux.weave.works/tag.traefik: semver:~1
    flux.weave.works/automated: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/name: traefik
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: traefik
        app.kubernetes.io/name: traefik
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - traefik
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - traefik
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - --configfile=/config/traefik.toml
        image: traefik:v1.7.14
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: traefik
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 8880
          name: httpn
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: dash
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /ssl
          name: ssl
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          name: traefik
        name: config
      - name: ssl
        secret:
          secretName: traefik-default-cert
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-dashboard
  namespace: default
spec:
  rules:
  - host: traefik.hannahs.family
    http:
      paths:
      - backend:
          serviceName: traefik-dashboard
          servicePort: dashboard-http
